--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.17.2",
+    "cloudinary": "^2.9.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-astro": "^0.556.0",
